<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/toolbar_iv_width"
                android:layout_height="@dimen/toolbar_iv_height"
                android:layout_gravity="center_vertical"
                android:background="@drawable/red_ripple_bg"
                android:contentDescription="@string/back"
                android:src="@drawable/back" />

            <EditText
                android:id="@+id/searchTx"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_normal"
                android:autofillHints="@string/search"
                android:hint="@string/search_tx"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="14sp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/hot_searchTx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/hot_search"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/flowLayout_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        zhy:max_select="1" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</LinearLayout>